--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header class="row header1">
         <div class="container">
             <div class="logo pull-left">
-                <a href="inicio.html"><img src="images/asd.png" alt=""></a>
+                <a href="inicio.html"><img src="images/ASD.png" alt=""></a>
             </div>
             <a href="#donate_box" class="btn-primary btn-outline hidden-sm hidden-xs pull-right">Donar Ahora</a>
             
