--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
     <header class="row header1">
         <div class="container">
             <div class="logo pull-left">
-                <a href="#"><img src="images/asd.png" alt=""></a>
+                <a href="#"><img src="images/ASD.png" alt=""></a>
             </div>
             <a href="#donate_box" class="btn-primary btn-outline hidden-sm hidden-xs pull-right">Donar Ahora</a>
             
