Cuentas en Dolares

--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
 							</div>
 							<h4 class="event_link"><a href="#">Alex André Solís Barrantes</a><br></h4>
                             <p><b>Banco Nacional de Costa Rica</b> 
-                            <br> Cuenta: <b>200-01-051-037071-6</b> 
-                            <br> Cuenta Cliente: <b>15105120010370713</b>
+                            <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
+                            <br> Cuenta Cliente Colones: <b>15105120010370713</b>
+                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
                             <br> E-mail: <b>solisbarrantes@gmail.com</b>
-                            <br> Swift: <b>BNCRCRSJ</b>
+                            <br> Cédula: <b>604210397</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -137,10 +138,11 @@
 							</div>
 							<h4 class="event_link"><a href="#">Alex André Solís Barrantes</a><br></h4>
                             <p><b>Banco Nacional de Costa Rica</b> 
-                            <br> Cuenta: <b>200-01-051-037071-6</b> 
-                            <br> Cuenta Cliente: <b>15105120010370713</b>
+                            <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
+                            <br> Cuenta Cliente Colones: <b>15105120010370713</b>
+                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
                             <br> E-mail: <b>solisbarrantes@gmail.com</b>
-                            <br> Swift: <b>BNCRCRSJ</b>
+                            <br> Cédula: <b>604210397</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -172,10 +174,11 @@
 							</div>
 							<h4 class="event_link"><a href="#">Alex André Solís Barrantes</a><br></h4>
                             <p><b>Banco Nacional de Costa Rica</b> 
-                            <br> Cuenta: <b>200-01-051-037071-6</b> 
-                            <br> Cuenta Cliente: <b>15105120010370713</b>
+                            <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
+                            <br> Cuenta Cliente Colones: <b>15105120010370713</b>
+                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
                             <br> E-mail: <b>solisbarrantes@gmail.com</b>
-                            <br> Swift: <b>BNCRCRSJ</b>
+                            <br> Cédula: <b>604210397</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -208,10 +211,11 @@
 							</div>
 							<h4 class="event_link"><a href="#">Alex André Solís Barrantes</a><br></h4>
                             <p><b>Banco Nacional de Costa Rica</b> 
-                            <br> Cuenta: <b>200-01-051-037071-6</b> 
-                            <br> Cuenta Cliente: <b>15105120010370713</b>
+                            <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
+                            <br> Cuenta Cliente Colones: <b>15105120010370713</b>
+                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
                             <br> E-mail: <b>solisbarrantes@gmail.com</b>
-                            <br> Swift: <b>BNCRCRSJ</b>
+                            <br> Cédula: <b>604210397</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -423,9 +427,12 @@
                     <h6 class="label label-default widget-title">cuenta bancaria</h6>
                     <address>
                         <span>Banco</span> : Banco Nacional de Costa Rica <br>
-                        <span>Cuenta Banco Nacional</span> : 200-01-051-037071-6 <br>
-                        <span>Cuenta Cliente</span> : 15105120010370713 <br>
+                        <span>Cuenta Banco Nacional Colones </span> : 200-01-051-037071-6 <br>
+                        <span>Cuenta Cliente Colones </span> : 15105120010370713 <br>
+                        <span>Cuenta Cliente Dólares </span> : 10200009253708688 <br>
+                        <span>Cédula </span> : 604210397 <br>
                         <span>Swift</span> : BNCRCRSJ <br>
+                        
                     </address>
                 </div>
             </div>
