--- a/micarta.html
+++ b/micarta.html
@@ -271,8 +271,10 @@ Les cuento la historia porque somos personas muy positivas <b>agradecidas con la
                     <h6 class="label label-default widget-title">cuenta bancaria</h6>
                     <address>
                         <span>Banco</span> : Banco Nacional de Costa Rica <br>
-                        <span>Cuenta Banco Nacional</span> : 200-01-051-037071-6 <br>
-                        <span>Cuenta Cliente</span> : 15105120010370713 <br>
+                        <span>Cuenta Banco Nacional Colones </span> : 200-01-051-037071-6 <br>
+                        <span>Cuenta Cliente Colones </span> : 15105120010370713 <br>
+                        <span>Cuenta Cliente Dólares </span> : 10200009253708688 <br>
+                        <span>Cédula </span> : 604210397 <br>
                         <span>Swift</span> : BNCRCRSJ <br>
                     </address>
                 </div>
