favicon e imgs de slider

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     
+    <link rel="shortcut icon" href="/images/sr_ico_v.ico" />
+    
     <!--Bootstrap-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -91,7 +93,7 @@
     <!--Featured Slider-->
     <section class="row featured_events">
         <div class="item">
-            <img src="images/slider-andre3.jpg" alt="">
+            <img src="images/slider-andre5.jpg" alt="">
             <div class="row caption m0">
                	<div class="caption_row">
 					<div class="container">
@@ -130,7 +132,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="images/slider-andre2.jpg" alt="">
+            <img src="images/slider-andre3.jpg" alt="">
             <div class="row caption m0">
                	<div class="caption_row">
 					<div class="container">
