--- a/micarta.html
+++ b/micarta.html
@@ -45,13 +45,12 @@
 </head>
 <body>
     
-    <!-- Load Facebook SDK for JavaScript -->
-	<div id="fb-root"></div>
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.7&appId=818830244860170";
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -237,9 +236,9 @@ Les cuento la historia porque somos personas muy positivas <b>agradecidas con la
                         <a href="#" class="btn-primary pull-left">DONAR AHORA</a>
                         <br class="visible-xs">
                         <ul class="list-unstyled">
-                            <li>COMPARTIR EN</li>
+                            <li>COMPARTIR EN</li>                            
                             <!-- FACEBOOK -->
-                            <li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fandresindolor.org%2Fmicarta.html&amp;src=sdkpreparse"><i class="fa fa-facebook"></i></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://andresindolor.org/micarta.html"><i class="fa fa-facebook"></i></a></li>
                             <!-- TWITTER -->
                             <li><a href="https://twitter.com/share?url=http://andresindolor.org/micarta.html;hashtags=AndreSinDolor" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <!-- GOOGLE PLUS -->
@@ -339,19 +338,10 @@ Les cuento la historia porque somos personas muy positivas <b>agradecidas con la
     
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <!--Google Map-->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="js/gmaps.min.js"></script>
-    <!--Bootstrap Select-->
-    <script src="vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <!--Magnific Popup-->
     <script src="vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
     <!--Owl Carousel-->
     <script src="vendors/owl.carousel/owl.carousel.min.js"></script>
-    <!--CounterUp-->
-    <script src="vendors/couterup/jquery.counterup.min.js"></script>
-    <!--WayPoints-->
-    <script src="vendors/waypoint/waypoints.min.js"></script>
     <!--Isotope & ImagesLoaded-->
     <script src="vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="vendors/isotope/isotope.min.js"></script>
