--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <p><b>Banco Nacional de Costa Rica</b> 
                             <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
                             <br> Cuenta Cliente Colones: <b>15105120010370713</b>
-                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
+                            <br> Cuenta Cliente Dólares (BAC): <b>10200009253708688</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -144,7 +144,7 @@
                             <p><b>Banco Nacional de Costa Rica</b> 
                             <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
                             <br> Cuenta Cliente Colones: <b>15105120010370713</b>
-                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
+                            <br> Cuenta Cliente Dólares (BAC): <b>10200009253708688</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -183,7 +183,7 @@
                             <p><b>Banco Nacional de Costa Rica</b> 
                             <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
                             <br> Cuenta Cliente Colones: <b>15105120010370713</b>
-                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
+                            <br> Cuenta Cliente Dólares (BAC): <b>10200009253708688</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -223,7 +223,7 @@
                             <p><b>Banco Nacional de Costa Rica</b> 
                             <br> Cuenta Colones: <b>200-01-051-037071-6</b> 
                             <br> Cuenta Cliente Colones: <b>15105120010370713</b>
-                            <br> Cuenta Cliente Dólares: <b>10200009253708688</b>
+                            <br> Cuenta Cliente Dólares (BAC): <b>10200009253708688</b>
                             </p>
 							<div class="row fund_raises m0">
 								<div class="pull-left raised amount_box">
@@ -449,7 +449,7 @@
                         <span>Banco</span> : Banco Nacional de Costa Rica <br>
                         <span>Cuenta Banco Nacional Colones </span> : 200-01-051-037071-6 <br>
                         <span>Cuenta Cliente Colones </span> : 15105120010370713 <br>
-                        <span>Cuenta Cliente Dólares </span> : 10200009253708688 <br>
+                        <span>Cuenta Cliente Dólares (BAC) </span> : 10200009253708688 <br>
                         <span>Cédula </span> : 604210397 <br>
                         <span>Swift</span> : BNCRCRSJ <br>
                         
